# nexus-os

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  AUDIT_THROUGHPUT_RESULTS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE.md  CODEBASE_REPORT.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONDUCTOR_RECON.md  CONTRIBUTING.md  Cargo.toml  DARWIN_DRIFT_RESULTS.md  DIAGNOSTIC_REPORT.md  Dockerfile  ENTERPRISE_GAP_TRACKER.md  FULL_AUDIT_REPORT.md  GENESIS_PROTOCOL_RESULTS.md  GOVERNANCE.md  LICENSE  MCP_VERIFICATION_REPORT.md  MEMORY_PROFILE_RESULTS.md  Makefile  NEXUSCODE.md  NEXUS_OS_PROJECT_REPORT.md  PRIVACY_DESIGN.md  README.md  RELEASE_NOTES_v2.0.0.md  ROADMAP.md  SECURITY.md  SECURITY_ADVISORIES.md  TEST_STATUS_REPORT.md  THREAT_MODEL.md  audit.toml  deny.toml  docker-compose.yml  (+2 more)
adaptation/: Cargo.toml
adaptation/src/: adapter.rs  authority.rs  evolution.rs  lib.rs  preferences.rs  suggestions.rs  tracker.rs
agents/coder/: Cargo.toml
agents/coding-agent/: Cargo.toml  manifest.toml
agents/collaboration/: Cargo.toml
agents/conductor/: Cargo.toml  manifest.toml
agents/designer/: Cargo.toml
analytics/: Cargo.toml
analytics/src/: collector.rs  evaluator.rs  lib.rs  report.rs
auth/: Cargo.toml
auth/src/: config.rs  error.rs  lib.rs  oidc.rs  roles.rs  session.rs
benchmarks/: BASELINES.md  Cargo.toml
benchmarks/benches/: agent_bench.rs  gateway_bench.rs  kernel_bench.rs  phase67_bench.rs  replay_bench.rs
benchmarks/conductor-bench/: Cargo.toml
benchmarks/src/: lib.rs
cli/: Cargo.toml
cli/src/: commands.rs  lib.rs  main.rs  packager.rs  router.rs  scaffold.rs  setup.rs  test_runner.rs
cli/tests/: cli_create_agent.rs  cli_self_improve.rs  cli_start_coding_agent.rs  placeholder.rs  sdk_workflow_tests.rs
cloud/: Cargo.toml
cloud/src/: auth.rs  lib.rs  metering.rs  tenant.rs
content/: Cargo.toml
content/src/: calendar.rs  compliance.rs  generator.rs  lib.rs
control/: Cargo.toml
control/src/: action_log.rs  capture.rs  input.rs  lib.rs
distributed/: Cargo.toml
distributed/src/: bft_bridge.rs  data_store.rs  device_pairing.rs  ghost_protocol.rs  global_network.rs  gossip.rs  immutable_audit.rs  leader_election.rs  lib.rs  membership.rs  node.rs  pbft.rs  quorum.rs  replication.rs  tcp_transport.rs  transport.rs  verification.rs
distributed/tests/: immutable_audit_integration_tests.rs
factory/: Cargo.toml
factory/src/: approval.rs  capabilities.rs  code_gen.rs  intent.rs  lib.rs  manifest_gen.rs  notifications.rs  pipeline.rs  remote.rs
integrations/: Cargo.toml
integrations/src/: config.rs  error.rs  events.rs  lib.rs  router.rs
kernel/: Cargo.toml
kernel/examples/: dump_config.rs  generate_genomes.rs
kernel/src/: adaptive_policy.rs  audit.rs  autonomy.rs  backup.rs  behavioral_profile.rs  capabilities.rs  checkpoint.rs  compliance_crosswalk.rs  computer_control.rs  concurrent_supervisor.rs  config.rs  consent.rs  consent_display.rs  content_pipeline.rs  crypto.rs  delegation.rs  drift_detector.rs  economic_identity.rs  errors.rs  fairness.rs  free_api_registry.rs  fuel_hardening.rs  governance_kpi.rs  hardware.rs  kill_gates.rs  lib.rs  lifecycle.rs  main.rs  manifest.rs  neural_bridge.rs  owasp_defenses.rs  permissions.rs  persistence.rs  privacy.rs  provenance.rs  rate_limit.rs  redaction.rs  release_signing.rs  reputation.rs  resource_limiter.rs  (+12 more)
kernel/tests/: acceptance_criteria_tests.rs  agent_integration_tests.rs  bug_c_verification.rs  bug_drop_verification.rs  compliance_integration_tests.rs  distributed_interfaces.rs  fuel_hardening_phase5.rs  identity_firewall_integration_tests.rs  kill_gates_phase7.rs  permission_dashboard_tests.rs  placeholder.rs  policy_engine_integration_tests.rs  protocols_integration_tests.rs  resource_limiter_integration_tests.rs  safety_supervisor_phase6.rs  semantic_boundary_integration_tests.rs  shell_executor_tests.rs
llama-bridge/: Cargo.toml  build.rs
llama-bridge/src/: batch.rs  chat_template.rs  context.rs  error.rs  ffi.rs  lib.rs  llama_helpers.c  llama_stub.c  model.rs  sampling.rs  tokenizer.rs  types.rs
llama-bridge/tests/: api_test.rs
marketplace/: Cargo.toml
marketplace/src/: install.rs  lib.rs  manifest_verify.rs  package.rs  payments.rs  registry.rs  scanner.rs  sqlite_registry.rs  trust.rs  verification_pipeline.rs
marketplace/tests/: marketplace_integration_tests.rs
metering/: Cargo.toml
metering/src/: aggregator.rs  collector.rs  cost.rs  error.rs  lib.rs  store.rs  types.rs
nexus-code/: BENCHMARKS.md  Cargo.toml  Dockerfile  install.sh
nexus-code/paper/: references.bib
nexus-code/scripts/: run_benchmarks.sh
nexus-code/src/: app.rs  config.rs  error.rs  governance_metrics.rs  lib.rs  main.rs  setup.rs
nexus-code/tests/: agent_tests.rs  computer_use_tests.rs  governance_tests.rs  integration_tests.rs  pipeline_tests.rs  provider_tests.rs  session10_tests.rs  session11_tests.rs  session4_tests.rs  session5_tests.rs  session7_tests.rs  session8_tests.rs  session9_tests.rs  tool_tests.rs  tui_tests.rs
persistence/: Cargo.toml
persistence/src/: lib.rs
protocols/: Cargo.toml  build.rs
protocols/src/: frontend.rs  http_gateway.rs  lib.rs  mcp_client.rs  metrics.rs  openai_compat.rs  server_runtime.rs
protocols/tests/: web_api_integration_tests.rs
research/: Cargo.toml
research/src/: fine_tuning.rs  lib.rs  pipeline.rs  review.rs  strategy.rs
sdk/: Cargo.toml
sdk/python/: README.md  pyproject.toml
sdk/src/: agent_trait.rs  context.rs  lib.rs  manifest.rs  memory.rs  module_cache.rs  prelude.rs  sandbox.rs  shadow_sandbox.rs  testing.rs  typed_tools.rs  wasm_agent.rs  wasm_signature.rs  wasmtime_host_functions.rs  wasmtime_sandbox.rs
sdk/tests/: speculative_shadow_tests.rs  wasmtime_integration_tests.rs
sdk/typescript/: README.md  package.json  tsconfig.json
self-update/: Cargo.toml
self-update/src/: analyzer.rs  connector_update.rs  lib.rs  monitor.rs  mutation.rs  patch_lang.rs  pipeline.rs  reporter.rs  tuf.rs
telemetry/: Cargo.toml
tenancy/: Cargo.toml
workflows/: Cargo.toml
(+1886 files in other folders)
