[workspace]
resolver = "2"
members = [
  "agents/coder",
  "agents/designer",
  "agents/coding-agent",
  "agents/screen-poster",
  "agents/self-improve",
  "agents/social-poster",
  "agents/web-builder",
  "agents/workflow-studio",
  "kernel",
  "connectors/core",
  "connectors/web",
  "connectors/social",
  "connectors/messaging",
  "connectors/llm",
  "workflows",
  "cli",
  "research",
  "content",
  "analytics",
  "adaptation",
  "control",
  "factory",
  "marketplace",
  "self-update",
  "tests/integration",
  "app/src-tauri",
  "benchmarks",
  "distributed",
  "sdk",
  "enterprise",
  "cloud",
  "agents/collaboration",
]

[workspace.package]
edition = "2021"
version = "5.0.0"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"
