[workspace]
resolver = "2"
members = [
  "agents/coder",
  "agents/designer",
  "agents/coding-agent",
  "agents/screen-poster",
  "agents/self-improve",
  "agents/social-poster",
  "agents/web-builder",
  "agents/workflow-studio",
  "kernel",
  "connectors/core",
  "connectors/web",
  "connectors/social",
  "connectors/messaging",
  "connectors/llm",
  "workflows",
  "cli",
  "research",
  "content",
  "analytics",
  "adaptation",
  "control",
  "factory",
  "marketplace",
  "self-update",
  "tests/integration",
  "app/src-tauri",
  "benchmarks",
  "distributed",
  "sdk",
  "enterprise",
  "cloud",
  "agents/collaboration",
  "agents/conductor",
  "protocols",
  "packaging/airgap",
  "persistence",
  "auth",
  "telemetry",
  "tenancy",
  "integrations",
  "metering",
  "llama-bridge",
  "crates/nexus-flash-infer",
  "benchmarks/conductor-bench",
  "crates/nexus-capability-measurement",
  "crates/nexus-governance-oracle",
  "crates/nexus-governance-engine",
  "crates/nexus-governance-evolution",
  "crates/nexus-predictive-router",
  "crates/nexus-browser-agent",
  "crates/nexus-token-economy",
  "crates/nexus-computer-control",
  "crates/nexus-world-simulation",
  "crates/nexus-perception",
  "crates/nexus-agent-memory",
  "crates/nexus-external-tools",
  "crates/nexus-collab-protocol",
  "crates/nexus-crypto",
  "crates/nexus-software-factory",
  "crates/nexus-mcp",
  "crates/nexus-server",
  "crates/nexus-a2a",
  "crates/nexus-memory",
  "crates/nexus-migrate",
  "crates/nexus-outcome-eval",
  "crates/nexus-self-improve",
  "nexus-code",
]

[workspace.package]
edition = "2021"
version = "10.6.0"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.dev]
debug = 1
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = "symbols"
