[package]
name = "nexus-analytics"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nexus-connectors-social = { path = "../connectors/social" }
nexus-connectors-web = { path = "../connectors/web" }
nexus-kernel = { path = "../kernel" }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
