[package]
name = "nexus-cli"
description = "Command-line interface for managing and interacting with Nexus OS"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
nexus-kernel = { path = "../kernel" }
nexus-connectors-core = { path = "../connectors/core" }
nexus-connectors-llm = { path = "../connectors/llm" }
coding-agent = { path = "../agents/coding-agent" }
social-poster-agent = { path = "../agents/social-poster" }
self-improve-agent = { path = "../agents/self-improve" }
nexus-conductor = { path = "../agents/conductor" }
chrono = "0.4"
nexus-sdk = { path = "../sdk" }
nexus-marketplace = { path = "../marketplace" }
nexus-crypto = { path = "../crates/nexus-crypto" }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.10", features = ["v4", "serde"] }
