[package]
name = "nexus-cloud"
description = "Cloud deployment, sync, and remote management for Nexus OS"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = { version = "1.10", features = ["v4", "serde"] }
