[package]
name = "nexus-control"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
playwright-process = []
platform-linux = []
platform-macos = []
platform-windows = []

[dependencies]
nexus-connectors-core = { path = "../connectors/core" }
nexus-kernel = { path = "../kernel" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
