[package]
name = "nexus-distributed"
description = "Distributed agent coordination, clustering, and peer-to-peer communication for Nexus OS"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nexus-kernel = { path = "../kernel" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
aes-gcm = "0.10"
ed25519-dalek = "2.2"
uuid = { version = "1.10", features = ["v4", "serde"] }
