[package]
name = "nexus-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
hardware-tpm = []
hardware-secure-enclave = []
hardware-tee = []

[dependencies]
aes-gcm = "0.10"
regex = "1.11"
ed25519-dalek = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
uuid = { version = "1.10", features = ["v4", "serde"] }
