[package]
name = "nexus-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
hardware-tpm = []
hardware-secure-enclave = []
hardware-tee = []
test-utils = []

[dependencies]
aes-gcm = "0.10"
regex = "1.11"
ed25519-dalek = "2.2"
getrandom = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hkdf = "0.12"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
bs58 = "0.5"
base64 = "0.22"
uuid = { version = "1.10", features = ["v4", "serde"] }
cron = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "time", "sync"] }
rand = "0.8"
nexus-persistence = { path = "../persistence" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
nexus-kernel = { path = ".", features = ["test-utils"] }
