[package]
name = "nexus-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
hardware-tpm = []
hardware-secure-enclave = []
hardware-tee = []
test-utils = []

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
flate2 = "1"
dashmap = "6"
governor = { version = "0.7", default-features = false, features = ["std", "dashmap"] }
tar = "0.4"
regex = "1.11"
ed25519-dalek = "2.2"
getrandom = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hkdf = "0.12"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
bs58 = "0.5"
base64 = "0.22"
uuid = { version = "1.10", features = ["v4", "serde"] }
cron = "0.15"
crossbeam = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
nexus-persistence = { path = "../persistence" }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["signal", "resource", "process"] }

[dev-dependencies]
tempfile = "3"
nexus-kernel = { path = ".", features = ["test-utils"] }
