[package]
name = "nexus-marketplace"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nexus-kernel = { path = "../kernel" }
nexus-connectors-core = { path = "../connectors/core" }
nexus-connectors-web = { path = "../connectors/web" }
nexus-connectors-social = { path = "../connectors/social" }
nexus-connectors-messaging = { path = "../connectors/messaging" }
nexus-connectors-llm = { path = "../connectors/llm" }
nexus-workflows = { path = "../workflows" }
nexus-research = { path = "../research" }
nexus-content = { path = "../content" }
nexus-analytics = { path = "../analytics" }
nexus-adaptation = { path = "../adaptation" }
nexus-control = { path = "../control" }
nexus-factory = { path = "../factory" }
ed25519-dalek = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }
