[package]
name = "nexus-metering"
description = "Fuel metering, usage tracking, and budget enforcement for Nexus OS agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
nexus-kernel = { path = "../kernel" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
