[package]
name = "nexus-code"
version = "0.1.0"
edition = "2021"
description = "The world's first governed terminal coding agent"
license = "MIT"

[[bin]]
name = "nx"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP + SSE
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# Cryptography (Ed25519)
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# Hashing (audit trail)
sha2 = "0.10"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Terminal
colored = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Dirs (config/data paths)
dirs = "5"

# Prompt
rustyline = "14"

# Async trait
async-trait = "0.1"

# Glob pattern matching
glob-match = "0.2"
glob = "0.3"

# Cancellation token for agent loop
tokio-util = { version = "0.7", features = ["rt"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
