[package]
name = "nexus-protocols"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "nexus-server"
path = "src/bin/nexus-server.rs"

[dependencies]
nexus-kernel = { path = "../kernel" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
rmcp = { version = "1.1", features = ["server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
nexus-marketplace = { path = "../marketplace" }
nexus-sdk = { path = "../sdk" }
nexus-connectors-llm = { path = "../connectors/llm" }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

[dev-dependencies]
tokio-tungstenite = "0.28"
futures-util = "0.3"
nexus-sdk = { path = "../sdk" }
wasmtime = "42"
wat = "1"
