[package]
name = "nexus-research"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nexus-connectors-llm = { path = "../connectors/llm" }
nexus-connectors-web = { path = "../connectors/web" }
nexus-kernel = { path = "../kernel" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
