[package]
name = "nexus-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nexus-kernel = { path = "../kernel" }
ed25519-dalek = "2.2"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
wasmtime = "27"
wasmtime-wasi = "27"

[dev-dependencies]
wat = "1"
