[package]
name = "nexus-sdk"
description = "Agent-facing SDK that re-exports kernel modules and provides the public API for Nexus OS"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nexus-kernel = { path = "../kernel" }
nexus-crypto = { path = "../crates/nexus-crypto" }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
wasmtime = "42"

[dev-dependencies]
wat = "1"
