[package]
name = "nexus-self-update"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nexus-kernel = { path = "../kernel" }
nexus-marketplace = { path = "../marketplace" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
