[package]
name = "nexus-self-update"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nexus-kernel = { path = "../kernel" }
nexus-marketplace = { path = "../marketplace" }
nexus-connectors-llm = { path = "../connectors/llm" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = { version = "1.10", features = ["v4", "serde"] }
