[package]
name = "nexus-self-update"
description = "Self-update mechanism for automatic Nexus OS version upgrades"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nexus-kernel = { path = "../kernel" }
nexus-marketplace = { path = "../marketplace" }
nexus-connectors-llm = { path = "../connectors/llm" }
nexus-connectors-core = { path = "../connectors/core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ed25519-dalek = "2.2"
nexus-crypto = { path = "../crates/nexus-crypto" }
uuid = { version = "1.10", features = ["v4", "serde"] }
