[package]
name = "nexus-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenTelemetry instrumentation, Prometheus metrics, and structured logging for Nexus OS"

[dependencies]
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
