[package]
name = "nexus-tenancy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Workspace-based multi-tenancy with data isolation, fuel budgets, and policy scoping for Nexus OS"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
