[package]
name = "nexus-workflows"
description = "Workflow engine for defining and executing multi-step agent task pipelines in Nexus OS"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
content = { package = "nexus-content", path = "../content" }
nexus-connectors-core = { path = "../connectors/core" }
nexus-connectors-social = { path = "../connectors/social" }
nexus-kernel = { path = "../kernel" }
nexus-research = { path = "../research" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
