[package]
name = "coder-agent"
description = "Autonomous code generation and editing agent for Nexus OS"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nexus-sdk = { path = "../../sdk" }
nexus-connectors-llm = { path = "../../connectors/llm" }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.13"
