[package]
name = "coding-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "coding-agent"
path = "src/main.rs"

[dependencies]
nexus-sdk = { path = "../../sdk" }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.10", features = ["v4", "serde"] }
