[package]
name = "nexus-collaboration"
description = "Multi-agent collaboration and coordination framework for Nexus OS"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nexus-sdk = { path = "../../sdk" }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
