[package]
name = "nexus-conductor"
description = "Orchestrator agent that coordinates and delegates tasks across Nexus OS agents"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
nexus-kernel = { path = "../../kernel" }
nexus-sdk = { path = "../../sdk" }
nexus-connectors-llm = { path = "../../connectors/llm" }
nexus-collaboration = { path = "../../agents/collaboration" }
nexus-factory = { path = "../../factory" }
web-builder-agent = { path = "../web-builder" }
coder-agent = { path = "../coder" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
