[package]
name = "designer-agent"
description = "UI/UX design and visual asset generation agent for Nexus OS"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nexus-sdk = { path = "../../sdk" }
nexus-connectors-llm = { path = "../../connectors/llm" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
